--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -20,11 +20,12 @@ jobs:
             - run: npm install
             - run: npm run build
 
-            - uses: chrislennon/action-aws-cli@v1.2
+            - uses: shinyinc/action-aws-cli@v1.2
             - run: aws s3 sync dist s3://${{ secrets.AWS_S3_BUCKET_NAME }}/container/latest
               env:
                 AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
                 AWS_ACCESS_SECRET_KEY: ${{ secrets.AWS_ACCESS_SECRET_KEY }}
+                AWS_DEFAULT_REGION: ""
 
 
 
